--- a/src/main/resources/assets/tb/lang/en_US.lang
+++ b/src/main/resources/assets/tb/lang/en_US.lang
@@ -6,6 +6,7 @@ tile.change_block.container.off=Off
 tile.toggle_block.name=Toggle Block
 tile.toggle_block.container.name=Toggle Block Controller
 tile.toggle_block.container.toggle_mode=Toggle Mode
+tile.toggle_block.container.cycle_storage_priority=Cycle Storage Priority
 tile.toggle_block.container.on=On
 tile.toggle_block.container.off=Off
 tile.toggle_block.container.storage=Storage
