--- a/src/main/resources/assets/tb/lang/en_US.lang
+++ b/src/main/resources/assets/tb/lang/en_US.lang
@@ -3,7 +3,10 @@ tile.change_block.container.name=Change Block
 tile.change_block.container.on=On
 tile.change_block.container.off=Off
 
-tile.toggle_block.name=Toggle Block
+tile.toggle_block_small.name=Small Toggle Block
+tile.toggle_block_medium.name=Medium Toggle Block
+tile.toggle_block_large.name=Large Toggle Block
+tile.toggle_block.desc=Can hold up to: §3%1$s§7 Change Blocks
 tile.toggle_block.container.name=Toggle Block Controller
 tile.toggle_block.container.toggle_mode=Toggle Mode
 tile.toggle_block.container.cycle_storage_priority=Cycle Storage Priority
