--- a/src/main/resources/assets/tb/lang/en_US.lang
+++ b/src/main/resources/assets/tb/lang/en_US.lang
@@ -19,6 +19,7 @@ tile.toggle_block.container.on=On
 tile.toggle_block.container.off=Off
 tile.toggle_block.container.storage=Storage
 tile.toggle_block.container.registered_blocks=Blocks: %1$s/%2$s
+tile.toggle_block.container.infinite_blocks=Blocks: %1$s
 tile.toggle_block.container.change_block_mode=Change Block Mode
 tile.toggle_block.container.storage_mode=Storage Priorities
 tile.toggle_block.container.storage_mode.storage_first.name=Local Storage First
