--- a/src/main/resources/assets/tb/lang/en_US.lang
+++ b/src/main/resources/assets/tb/lang/en_US.lang
@@ -19,13 +19,15 @@ tile.toggle_block_medium.name=Medium Toggle Block
 tile.toggle_block_large.name=Large Toggle Block
 tile.toggle_block_huge.name=Huge Toggle Block
 tile.toggle_block_creative.name=Creative Toggle Block
+
 tile.tiny_toggle_block.desc=Holds up to: §3%1$s§7 Change Blocks§r
 tile.small_toggle_block.desc=Holds up to: §3%1$s§7 Change Blocks§r
 tile.medium_toggle_block.desc=Holds up to: §3%1$s§7 Change Blocks§r
 tile.large_toggle_block.desc=Holds up to: §3%1$s§7 Change Blocks§r
 tile.huge_toggle_block.desc=Holds up to: §3%1$s§7 Change Blocks§r
 tile.creative_toggle_block.desc=Can hold §dinfinite§7 Change Blocks
-tile.toggle_block.container.name=Toggle Block Controller
+
+tile.toggle_block.container.name=Toggle Block
 tile.toggle_block.container.toggle_mode=Toggle Mode
 tile.toggle_block.container.cycle_storage_priority=Cycle Storage Priority
 tile.toggle_block.container.on=On
@@ -33,7 +35,8 @@ tile.toggle_block.container.off=Off
 tile.toggle_block.container.storage=Storage
 tile.toggle_block.container.registered_blocks=Blocks: %1$s/%2$s
 tile.toggle_block.container.infinite_blocks=Blocks: %1$s
-tile.toggle_block.container.change_block_mode=Change Block Mode
+tile.toggle_block.container.change_block_mode.ready=Change Block Mode: Ready
+tile.toggle_block.container.change_block_mode.editing=Change Block Mode: Editing
 tile.toggle_block.container.storage_mode=Storage Priorities
 tile.toggle_block.container.storage_mode.storage_first.name=Local Storage First
 tile.toggle_block.container.storage_mode.storage_first.desc=Fills up the toggle block's local storage before putting items into surrounding chests.
@@ -45,3 +48,4 @@ tile.toggle_block.container.storage_mode.chests_only.name=Chests Only
 tile.toggle_block.container.storage_mode.chests_only.desc=Only uses nearby chests, and ignores the toggle block's local storage.
 
 message.full_toggle_controller=Controller is already at full capacity!
+message.toggle_controller_not_found=The controller could not be found!
